src/tui/snapshots/cargo_parallels__tui__renderer__tests__renderer_status_bar_normal_mode.snap
---
source: src/tui/renderer.rs
assertion_line: 283
expression: buffer_to_string(&terminal)
---
┌Commands────────────────────────────────────────┐
│ test                                           │
└────────────────────────────────────────────────┘
┌Output──────────────────────────────────────────┐
│                                                │
│                                                │
└────────────────────────────────────────────────┘
 NORMAL | Auto-scroll: ON | h/l:tabs j/k:scroll /:
