src/tui/snapshots/cargo_parallels__tui__renderer__tests__renderer_status_bar_search_mode.snap
---
source: src/tui/renderer.rs
expression: buffer_to_string(&terminal)
---
┌Commands────────────────────────────────────────┐
│ test                                           │
├────────────────────────────────────────────────┤
│[stdout] hello world                            │
│[stdout] hello there                            │
│[stdout] goodbye                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
 SEARCH: hello (1/2) | Enter:confirm Esc:cancel
