src/tui/snapshots/cargo_parallels__tui__renderer__tests__renderer_tab_bar_single_tab.snap
---
source: src/tui/renderer.rs
assertion_line: 230
expression: buffer_to_string(&terminal)
---
┌Commands──────────────────────────────┐
│ echo hello                           │
└──────────────────────────────────────┘
┌Output────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
 NORMAL | Auto-scroll: ON | h/l:tabs j/k
